Login campos, butón

--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
-        <script type="text/javascript" src="Listasimple.js"></script>
+        <link rel="stylesheet" type="text/css" href="./Style/normalize.css">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="./Style/Style.css">
     </head>
     <body>
-        <form>
-            <div>
-                <input type="text">
-            </div>
-            <div>
-                <input type="text">
-            </div>
-        </form>
+        <div class="contentForm">
+            <form class="formLogin">
+                <div class="input-text">
+                    <input id="user" name="user" type="text">
+                </div>
+                <div class="input-text">
+                    <input id="pass" name="pass" type="password">
+                </div>
+                <div class="button-login">
+                    <button>Iniciar Sesión</button>
+                </div>
+            </form>
+        </div>
     </body>
+    <script type="text/javascript" src=""></script>
 </html>
