--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
     <body>
         <div class="contentForm">
             <form class="formLogin">
+                <div class="formTitle">
+                    <label>Inicio de Sesión</label>
+                </div>
                 <div class="input-text">
+                    <label for="user">Usuario</label>
                     <input id="user" name="user" type="text">
                 </div>
                 <div class="input-text">
+                    <label for="pass">Contraseña</label>
                     <input id="pass" name="pass" type="password">
                 </div>
                 <div class="button-login">
