--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         <link rel="stylesheet" type="text/css" href="./Style/normalize.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./Style/Style.css">
+        <script type="text/javascript" src="./Js/Dark.js"></script>
     </head>
     <body>
         <div class="contentForm">
             <form class="formLogin">
                 <div class="formTitle">
-                    <label>Inicio de Sesión</label>
+                    <label>Bienvenido</label>
                 </div>
                 <div class="input-text">
                     <label for="user">Usuario</label>
