form signin,css

--- a/Login.html
+++ b/Login.html
@@ -26,6 +26,8 @@
                 <div class="button-login">
                     <button>Iniciar Sesión</button>
                 </div>
+                <a class="vinculo" href="./Signin.html">Registrarse</a>
+                <a class="vinculo" href="./index.html">Volver</a>
             </form>
         </div>
     </body>
