--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyApp</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./Style/normalize.css">
     <link rel="stylesheet" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="">
@@ -16,17 +16,17 @@
         <div class="contenedor">
             <div class="barra derecha">
                 <nav class="navegacion">
-                    <a href="#" class="navegacion__enlace">Inicio</a>
-                    <a href="#" class="navegacion__enlace">Libros</a>
-                    <a href="#" class="navegacion__enlace">Top Ventas</a>
-                    <a href="#" class="navegacion__enlace">Iniciar Sesión</a>
+                    <a href="#libros" class="navegacion__enlace">Libros</a>
+                    <a href="#topcom" class="navegacion__enlace">Top Compras</a>
+                    <a href="./Login.html" class="navegacion__enlace">Iniciar Sesión</a>
                 </nav>
             </div>
         </div>
         <div class="contenedor">
+            <div id="libros"></div>
+            <div id="topcom"></div>
         </div>
     </header>
-
     <script src="js/script.js"></script>
 </body>
 </html>
