--- a/Login.html
+++ b/Login.html
@@ -17,12 +17,14 @@
                 </div>
                 <div class="input-text">
                     <label for="user">Usuario</label>
-                    <input id="user" name="user" type="text">
+                    <input id="user" type="text">
                 </div>
                 <div class="input-text">
                     <label for="pass">Contraseña</label>
-                    <input id="pass" name="pass" type="password">
+                    <input id="pass" type="password">
                 </div>
+
+                
                 <div class="button-login">
                     <button>Iniciar Sesión</button>
                 </div>
