--- a/Signin.html
+++ b/Signin.html
@@ -18,27 +18,27 @@
                 <div class="dos-columnas">
                     <div class="input-text">
                         <label for="user">DPI</label>
-                        <input id="user" name="user" type="number" min="0">
+                        <input id="user"type="number" min="0">
                     </div>
                     <div class="input-text">
                         <label for="user">Nombre Completo</label>
-                        <input id="user" name="user" type="text">
+                        <input id="user" type="text">
                     </div>
                     <div class="input-text">
                         <label for="user">Usuario</label>
-                        <input id="user" name="user" type="text">
+                        <input id="user" type="text">
                     </div>
                     <div class="input-text">
                         <label for="user">E-mail</label>
-                        <input id="user" name="user" type="email">
+                        <input id="user" type="email">
                     </div>
                     <div class="input-text">
                         <label for="pass">Contraseña</label>
-                        <input id="pass" name="pass" type="password">
+                        <input id="pass" type="password">
                     </div>
                     <div class="input-text">
                         <label for="pass">Teléfono</label>
-                        <input id="pass" name="pass" type="number" min="0">
+                        <input id="pass" type="number" min="0">
                     </div>
                 </div>
                 <div class="button-login">
