--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>Admin</title>
         <link rel="stylesheet" href="./Style/normalize.css">
         <link rel="stylesheet" href="">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -15,9 +15,10 @@
             <div class="contenedor">
                 <div class="barra derecha">
                     <nav class="navegacion">
-                        <a href="#libros" class="navegacion__enlace">Libros</a>
-                        <a href="#topcom" class="navegacion__enlace">Top Compras</a>
-                        <a href="./Login.html" class="navegacion__enlace">Iniciar Sesión</a>
+                        <a href="#libros" class="navegacion__enlace">Carga de Usuarios</a>
+                        <a href="#topcom" class="navegacion__enlace">Carga de Clientes</a>
+                        <a href="#topcom" class="navegacion__enlace">Carga de Libros</a>
+                        <a href="#" class="navegacion__enlace">Cerrar Sesión</a>
                     </nav>
                 </div>
             </div>
