dot list of lists,init js,nodo,lists class

--- a/Login.html
+++ b/Login.html
@@ -23,8 +23,6 @@
                     <label for="pass">Contraseña</label>
                     <input id="pass" type="password">
                 </div>
-
-                
                 <div class="button-login">
                     <button>Iniciar Sesión</button>
                 </div>
@@ -33,5 +31,5 @@
             </form>
         </div>
     </body>
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="./Js/Script.js"></script>
 </html>
