Get listas,functions augh

--- a/Login.html
+++ b/Login.html
@@ -24,12 +24,12 @@
                     <input id="pass" type="password">
                 </div>
                 <div class="button-login">
-                    <button>Iniciar Sesión</button>
+                    <button onclick="login()">Iniciar Sesión</button>
                 </div>
                 <a class="vinculo" href="./Signin.html">Registrarse</a>
                 <a class="vinculo" href="./index.html">Volver</a>
             </form>
         </div>
     </body>
-    <script type="text/javascript" src="./Js/Script.js"></script>
+    <script src="./Js/Auth.js"></script>
 </html>
