--- a/Signin.html
+++ b/Signin.html
@@ -17,28 +17,28 @@
                 </div>
                 <div class="dos-columnas">
                     <div class="input-text">
-                        <label for="user">DPI</label>
-                        <input id="user"type="number" min="0">
+                        <label for="dpi">DPI</label>
+                        <input id="dpi"type="number" min="0">
                     </div>
                     <div class="input-text">
-                        <label for="user">Nombre Completo</label>
-                        <input id="user" type="text">
+                        <label for="name">Nombre Completo</label>
+                        <input id="name" type="text">
                     </div>
                     <div class="input-text">
                         <label for="user">Usuario</label>
                         <input id="user" type="text">
                     </div>
                     <div class="input-text">
-                        <label for="user">E-mail</label>
-                        <input id="user" type="email">
+                        <label for="email">E-mail</label>
+                        <input id="email" type="email">
                     </div>
                     <div class="input-text">
                         <label for="pass">Contraseña</label>
                         <input id="pass" type="password">
                     </div>
                     <div class="input-text">
-                        <label for="pass">Teléfono</label>
-                        <input id="pass" type="number" min="0">
+                        <label for="phone">Teléfono</label>
+                        <input id="phone" type="number" min="0">
                     </div>
                 </div>
                 <div class="button-login">
@@ -48,5 +48,5 @@
             </form>
         </div>
     </body>
-    <script type="text/javascript" src=""></script>
+    <script src=""></script>
 </html>
