--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
             <div id="libros"></div>
             <div id="topcom"></div>
         </div>
-        <script src="./Js/Init.js"></script>
+        <script src="./Js/Script.js"></script>
     </body>
 </html>
