--- a/Login.html
+++ b/Login.html
@@ -31,5 +31,5 @@
             </form>
         </div>
     </body>
-    <script src="./Js/Auth.js"></script>
+    <script src="./Js/Script.js"></script>
 </html>
