--- a/Login.html
+++ b/Login.html
@@ -24,10 +24,10 @@
                     <input id="pass" type="password">
                 </div>
                 <div class="button-login">
-                    <button onclick="login()">Iniciar Sesión</button>
+                    <button type="button" onclick="login()">Iniciar Sesión</button>
                 </div>
                 <a class="vinculo" href="./Signin.html">Registrarse</a>
-                <a class="vinculo" href="./index.html">Volver</a>
+                <a class="vinculo" href="./index.html">Inicio</a>
             </form>
         </div>
     </body>
