--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -18,7 +18,7 @@
                         <a href="#libros" class="navegacion__enlace">Carga de Usuarios</a>
                         <a href="#topcom" class="navegacion__enlace">Carga de Clientes</a>
                         <a href="#topcom" class="navegacion__enlace">Carga de Libros</a>
-                        <a href="#" class="navegacion__enlace">Cerrar Sesión</a>
+                        <a href="./Login.html" class="navegacion__enlace">Cerrar Sesión</a>
                     </nav>
                 </div>
             </div>
