--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -15,17 +15,24 @@
             <div class="contenedor">
                 <div class="barra derecha">
                     <nav class="navegacion">
-                        <a href="#libros" class="navegacion__enlace">Carga de Usuarios</a>
-                        <a href="#topcom" class="navegacion__enlace">Carga de Clientes</a>
-                        <a href="#topcom" class="navegacion__enlace">Carga de Libros</a>
+                        <a href="#users" class="navegacion__enlace">Carga de Usuarios</a>
+                        <a href="#authors" class="navegacion__enlace">Carga de Autores</a>
+                        <a href="#books" class="navegacion__enlace">Carga de Libros</a>
                         <a href="./Login.html" class="navegacion__enlace">Cerrar Sesión</a>
                     </nav>
                 </div>
             </div>
         </header>
-        <div class="contenedor">
-            <div id="libros"></div>
-            <div id="topcom"></div>
+        <div class="bodyCharge">
+            <div class="users" id="users">
+                <h1>Carga Masiva de Usuarios</h1>
+            </div>
+            <div class="authors" id="authors">
+                <h1>Carga Masiva de Autores</h1>
+            </div>
+            <div class="books" id="books">
+                <h1>Carga Masiva de Libros</h1>
+            </div>
         </div>
         <script></script>
     </body>
