--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -26,12 +26,18 @@
         <div class="bodyCharge">
             <div class="users" id="users">
                 <h1>Carga Masiva de Usuarios</h1>
+                <input type="file" id="fileusers" accept=".json">
+                <button type="button" onclick="chargeUsers()">Cargar Usuarios</button>
             </div>
             <div class="authors" id="authors">
                 <h1>Carga Masiva de Autores</h1>
+                <input type="file" id="fileauthors" accept=".json">
+                <button type="button" onclick="">Cargar Autores</button>
             </div>
             <div class="books" id="books">
-                <h1>Carga Masiva de Libros</h1>
+                <h1>Carga Masiva de Libros</h1>´
+                <input type="file" id="filebooks" accept=".json">
+                <button type="button" onclick="">Cargar Libros</button>
             </div>
         </div>
         <script></script>
