--- a/Signin.html
+++ b/Signin.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="button-login">
-                    <button>Registrar</button>
+                    <button type="button" onclick="signin()">Registrar</button>
                 </div>
                 <a class="vinculo" href="./Login.html">Iniciar Sesión</a>
             </form>
