--- a/UserProfile.html
+++ b/UserProfile.html
@@ -16,7 +16,7 @@
                 <div class="barra derecha">
                     <nav class="navegacion">
                         <!-- <a href="#topcom" class="navegacion__enlace">Carga de Libros</a> -->
-                        <a href="#" class="navegacion__enlace">Cerrar Sesión</a>
+                        <a href="./Login.html" class="navegacion__enlace">Cerrar Sesión</a>
                     </nav>
                 </div>
             </div>
