--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -40,6 +40,6 @@
                 <button type="button" onclick="">Cargar Libros</button>
             </div>
         </div>
-        <script></script>
+        <script src="./Js/Script.js"></script>
     </body>
 </html>
