--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -32,7 +32,7 @@
             <div class="authors" id="authors">
                 <h1>Carga Masiva de Autores</h1>
                 <input type="file" id="fileauthors" accept=".json">
-                <button type="button" onclick="">Cargar Autores</button>
+                <button type="button" onclick="chargeAuthors()">Cargar Autores</button>
             </div>
             <div class="books" id="books">
                 <h1>Carga Masiva de Libros</h1>´
