--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -34,6 +34,9 @@
                     </label>
                     <button type="button" onclick="chargeUsers()">Cargar Usuarios</button>
                 </div>
+                <div id="usersCustomers">
+                    <h1>Clientes</h1>
+                </div>
             </div>
             <div class="authors" id="authors">
                 <h1>Carga Masiva de Autores</h1>
@@ -58,6 +61,9 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <button type="button" onclick="reset()">Cargar Autores</button>
+        </footer>
         <script src="./Js/Script.js"></script>
         <script src="./Js/ScriptChooseFile.js"></script>
     </body>
