--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -52,6 +52,9 @@
                     </label>
                     <button type="button" onclick="chargeAuthors()">Cargar Autores</button>
                 </div>
+                <h3>Autores</h3>
+                <div id="binarytree"></div>
+                <script>binaryTree()</script>
             </div>
             <div class="books" id="books">
                 <h2>Carga Masiva de Libros</h2>
