Matriz dispersa dot (thriller)

--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -66,6 +66,7 @@
                     </label>
                     <button type="button" onclick="chargeBooks()">Cargar Libros</button>
                 </div>
+                <h3 id="estado"></h3>
             </div>
         </div>
         <footer>
