Thriller books html

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -27,15 +27,25 @@
         </header>
         <div class="bodyCharge">
             <div class="books" id="books">
-                <h2>Categoría: Thriller</h2>
+                <h2>Libros</h2>
+                <h3>Categoría: Fantasia</h3>
                 <div class="dos-columnas">
-                    <div></div>
+                    <div class="cuatro-columnas" id="fantasiabook"></div>
+                    <div id="fantasia"></div>
+                </div>
+                <script></script>
+                <script></script>
+                <h3>Categoría: Thriller</h3>
+                <div class="dos-columnas">
+                    <div class="cuatro-columnas" id="thrillerbook"></div>
                     <div id="thriller"></div>
                 </div>
+                <script>booksThriller()</script>
                 <script>disperseMatrix()</script>
             </div>
 
             <div id="topcom"></div>
         </div>
+        <footer></footer>
     </body>
 </html>
