fantasia libros html

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -29,17 +29,13 @@
             <div class="books" id="books">
                 <h2>Libros</h2>
                 <h3>Categoría: Fantasia</h3>
-                <div class="dos-columnas">
-                    <div class="cuatro-columnas" id="fantasiabook"></div>
-                    <div id="fantasia"></div>
-                </div>
-                <script></script>
+                <div class="libro-columnas" id="fantasiabook"></div>
+                <div id="fantasia"></div>
+                <script>booksFantasia()</script>
                 <script></script>
                 <h3>Categoría: Thriller</h3>
-                <div class="dos-columnas">
-                    <div class="cuatro-columnas" id="thrillerbook"></div>
-                    <div id="thriller"></div>
-                </div>
+                <div class="libro-columnas" id="thrillerbook"></div>
+                <div id="thriller"></div>
                 <script>booksThriller()</script>
                 <script>disperseMatrix()</script>
             </div>
