ortogonal matrix dot,dos-columnas style

--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -39,7 +39,7 @@
                     <button type="button" onclick="chargeUsers()">Cargar Usuarios</button>
                 </div>
                 <h3>Clientes</h3>
-                <div id="listoflists"></div>
+                <div id="listoflists" style="width: auto;padding: 2rem;"></div>
                 <script>listOfLists()</script>
             </div>
             <div class="authors" id="authors">
@@ -53,7 +53,7 @@
                     <button type="button" onclick="chargeAuthors()">Cargar Autores</button>
                 </div>
                 <h3>Autores</h3>
-                <div id="binarytree"></div>
+                <div id="binarytree" style="width: auto;padding: 2rem;"></div>
                 <script>binaryTree()</script>
             </div>
             <div class="books" id="books">
