--- a/UserProfile.html
+++ b/UserProfile.html
@@ -29,13 +29,17 @@
             <div class="books" id="books">
                 <h2>Libros</h2>
                 <h3>Categoría: Fantasia</h3>
-                <div class="libro-columnas" id="fantasiabook"></div>
-                <div id="fantasia"></div>
+                <div class="dos-columnas">
+                    <div class="libro-columnas" id="fantasiabook"></div>
+                    <div id="fantasia" style="width: auto;padding: 2rem;"></div>
+                </div>
                 <script>booksFantasia()</script>
-                <script></script>
+                <script>ortogonalMatrix()</script>
                 <h3>Categoría: Thriller</h3>
-                <div class="libro-columnas" id="thrillerbook"></div>
-                <div id="thriller"></div>
+                <div class="dos-columnas">
+                    <div class="libro-columnas" id="thrillerbook"></div>
+                    <div id="thriller" style="width: 100%;padding: 2rem;"></div>
+                </div>
                 <script>booksThriller()</script>
                 <script>disperseMatrix()</script>
             </div>
