barra superior menu usuario

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -15,11 +15,14 @@
         <script src="./Js/Script.js"></script>
     </head>
     <body>
-        <header class="header">
+        <header id="header" class="header">
             <div class="contenedor">
                 <div class="barra derecha">
                     <nav class="navegacion">
-                        <!-- <a href="#topcom" class="navegacion__enlace">Carga de Libros</a> -->
+                        <a href="#header" class="navegacion__enlace">Mi Biblioteca</a>
+                        <a href="#books" class="navegacion__enlace">Libreras</a>
+                        <a href="#buybooks" class="navegacion__enlace">Compras</a>
+                        <a href="#autores" class="navegacion__enlace">Autores</a>
                         <a href="./Login.html" class="navegacion__enlace">Cerrar Sesión</a>
                     </nav>
                 </div>
@@ -27,7 +30,7 @@
         </header>
         <div class="bodyCharge">
             <div class="books" id="books">
-                <h2>Libros</h2>
+                <h2>Libreras</h2>
                 <h3>Categoría: Fantasia</h3>
                 <div class="dos-columnas">
                     <div class="libro-columnas" id="fantasiabook"></div>
