modal window pila ejemplares

--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -54,7 +54,7 @@
                 </div>
                 <h3>Autores</h3>
                 <div id="binarytree" style="width: auto;padding: 2rem;"></div>
-                <script>binaryTree()</script>
+                <script>binaryTree(1150)</script>
             </div>
             <div class="books" id="books">
                 <h2>Carga Masiva de Libros</h2>
