grafo pila ejemplares

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -46,17 +46,6 @@
                 <script>booksThriller()</script>
                 <script>disperseMatrix()</script>
             </div>
-
-            <div class="fondo_transparente">
-                <div class="modal">
-                    <div class="modal_cerrar">
-                        <span>x</span>
-                    </div>
-                    <div class="modal_titulo" id="tituloLibroPila"></div>
-                    <div class="modal_mensaje" id="grafopila"></div>
-                    <div class="modal_botones"></div>
-                </div>
-            </div>
             <div class="authors" id="authors">
                 <h2>Autores</h2>
                 <div class="dos-columnas">
@@ -65,6 +54,16 @@
                 </div>
                 <script>authors()</script>
                 <script>binaryTree(800)</script>
+            </div>
+            <div class="fondo_transparente">
+                <div class="modal">
+                    <div class="modal_cerrar">
+                        <span>x</span>
+                    </div>
+                    <div class="modal_titulo" id="titulomodal"></div>
+                    <div class="modal_mensaje" id="contenidomodal"></div>
+                    <div class="modal_botones"></div>
+                </div>
             </div>
         </div>
         <footer></footer>
