look books and look author's biography

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -72,6 +72,8 @@
                 'click',
                 function() {
                     document.getElementsByClassName('fondo_transparente')[0].style.display = 'none'
+                    document.getElementById('titulomodal').innerHTML = ''
+                    document.getElementById('contenidomodal').innerHTML = ''
                 }
             )
         </script>
