grid row and columns graphs

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -32,26 +32,17 @@
             <div class="books" id="books">
                 <h2>Libreras</h2>
                 <h3>Categoría: Fantasia</h3>
-                <div class="dos-columnas">
-                    <div class="libro-columnas" id="fantasiabook"></div>
-                    <div id="fantasia" style="width: auto;padding: 2rem;"></div>
-                </div>
+                <div class="mosaico" id="fantasiabook"></div>
                 <script>booksFantasia()</script>
                 <script>ortogonalMatrix()</script>
                 <h3>Categoría: Thriller</h3>
-                <div class="dos-columnas">
-                    <div class="libro-columnas" id="thrillerbook"></div>
-                    <div id="thriller" style="width: 100%;padding: 2rem;"></div>
-                </div>
+                <div class="mosaico" id="thrillerbook"></div>
                 <script>booksThriller()</script>
                 <script>disperseMatrix()</script>
             </div>
             <div class="authors" id="authors">
                 <h2>Autores</h2>
-                <div class="dos-columnas">
-                    <div class="libro-columnas" id="authorsR"></div>
-                    <div id="binarytree" style="width: auto;padding: 2rem;"></div>
-                </div>
+                <div class="mosaico" id="authorsR"></div>
                 <script>authors()</script>
                 <script>binaryTree(800)</script>
             </div>
