--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -39,7 +39,7 @@
                     <button type="button" onclick="chargeUsers()">Cargar Usuarios</button>
                 </div>
                 <h3>Clientes</h3>
-                <div id="listoflists" style="width: auto;padding: 2rem;"></div>
+                <div class="graphs" id="listoflists" style="width: auto;padding: 2rem;"></div>
                 <script>listOfLists()</script>
             </div>
             <div class="authors" id="authors">
@@ -53,7 +53,7 @@
                     <button type="button" onclick="chargeAuthors()">Cargar Autores</button>
                 </div>
                 <h3>Autores</h3>
-                <div id="binarytree" style="width: auto;padding: 2rem;"></div>
+                <div class="graphs" id="binarytree" style="width: auto;padding: 2rem;"></div>
                 <script>binaryTree(1150)</script>
             </div>
             <div class="books" id="books">
@@ -66,7 +66,8 @@
                     </label>
                     <button type="button" onclick="chargeBooks()">Cargar Libros</button>
                 </div>
-                <h3 id="estado"></h3>
+                <div class="graphs" id="booksCharge"></div>
+                <script>booksChargeConfirm()</script>
             </div>
         </div>
         <footer>
