div mybooks and buybooks, padding div

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -29,6 +29,9 @@
             </div>
         </header>
         <div class="bodyCharge">
+            <div class="mybooks" id="mybooks">
+                <h2>Mi Biblioteca</h2>
+            </div>
             <div class="books" id="books">
                 <h2>Libreras</h2>
                 <h3>Categoría: Fantasia</h3>
@@ -39,6 +42,9 @@
                 <div class="mosaico" id="thrillerbook"></div>
                 <script>booksThriller()</script>
                 <script>disperseMatrix()</script>
+            </div>
+            <div class="books" id="buybooks">
+                <h2>Compra de Libros</h2>
             </div>
             <div class="authors" id="authors">
                 <h2>Autores</h2>
