salebooks, new colors style

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -45,6 +45,8 @@
             </div>
             <div class="books" id="buybooks">
                 <h2>Compra de Libros</h2>
+                <div class="mosaico" id="saleBooks"></div>
+                <script>saleBooks()</script>
             </div>
             <div class="authors" id="authors">
                 <h2>Autores</h2>
