get book of stock

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="modal_titulo" id="titulomodal"></div>
                     <div class="modal_mensaje" id="contenidomodal"></div>
-                    <div class="modal_botones"></div>
+                    <div class="modal_botones" id="botones"></div>
                 </div>
             </div>
         </div>
