--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -13,17 +13,27 @@
         <script src="https://unpkg.com/@hpcc-js/wasm@0.3.11/dist/index.min.js"></script>
         <script src="https://unpkg.com/d3-graphviz@3.0.5/build/d3-graphviz.js"></script>
         <script src="./Js/Script.js"></script>
+        <script>
+            try {
+                let url = window.location.href
+                var dpiAdmin = url.match(/dpi=\d+$/)[0].split('=')[1]
+            } catch (error) {}
+        </script>
     </head>
     <body>
         <header id="header" class="header">
             <div class="contenedor">
-                <div class="barra derecha">
+                <div class="barra">
+                    <a href="#" class="logo">
+                        <h1 class="logo__nombre no-margin centrar-texto" id="usernameAdmin"></h1>
+                    </a>
                     <nav class="navegacion">
                         <a href="#header" class="navegacion__enlace">Carga de Usuarios</a>
                         <a href="#authors" class="navegacion__enlace">Carga de Autores</a>
                         <a href="#books" class="navegacion__enlace">Carga de Libros</a>
                         <a href="./Login.html" class="navegacion__enlace">Cerrar Sesión</a>
                     </nav>
+                    <script>getNameAdmin()</script>
                 </div>
             </div>
         </header>
@@ -54,7 +64,7 @@
                 </div>
                 <h3>Autores</h3>
                 <div class="graphs" id="binarytree" style="width: auto;padding: 2rem;"></div>
-                <script>binaryTree(1150)</script>
+                <script>binaryTree()</script>
             </div>
             <div class="books" id="books">
                 <h2>Carga Masiva de Libros</h2>
