--- a/AdminProfile.html
+++ b/AdminProfile.html
@@ -49,8 +49,8 @@
                     <button type="button" onclick="chargeUsers()">Cargar Usuarios</button>
                 </div>
                 <h3>Clientes</h3>
-                <div class="graphs" id="listoflists" style="width: auto;padding: 2rem;"></div>
-                <script>listOfLists()</script>
+                <div class="" id="listoflists" style="width: auto;padding: 2rem;"></div>
+                <script>listOfLists(1150)</script>
             </div>
             <div class="authors" id="authors">
                 <h2>Carga Masiva de Autores</h2>
@@ -63,8 +63,8 @@
                     <button type="button" onclick="chargeAuthors()">Cargar Autores</button>
                 </div>
                 <h3>Autores</h3>
-                <div class="graphs" id="binarytree" style="width: auto;padding: 2rem;"></div>
-                <script>binaryTree()</script>
+                <div class="" id="binarytree" style="width: auto;padding: 2rem;"></div>
+                <script>binaryTree(1150)</script>
             </div>
             <div class="books" id="books">
                 <h2>Carga Masiva de Libros</h2>
