div books and top users home

--- a/UserProfile.html
+++ b/UserProfile.html
@@ -84,6 +84,7 @@
                 function() {
                     document.getElementsByClassName('fondo_transparente')[0].style.display = 'none'
                     document.getElementById('contenidomodal').innerHTML = ''
+                    document.getElementById('botones').innerHTML = ''
                 }
             )
         </script>
