boos home function, class msg

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="authors" id="users">
                 <h2>Top Usuarios con más Compras</h2>
                 <div class="mosaicotop" id="topcom"></div>
-                <script></script>
+                <script>getTop()</script>
             </div>
         </div>
     </body>
